# lwf

./: .dockerignore  Dockerfile  app.py  cmd_ctrl.py  cmd_ctrl_install.sh  controller.py  diet_pi_boot_config.txt  docker-compose.yml  example_gps_ouput.txt  laser_api.py  navigator.py  nuc-docker-compose.yml  oracle.py  pyproject.toml  requirements.txt  touch_ui_app.py
.streamlit/: config.toml
3d_models/: Bottom Hub.3mf  EGO_Battery_Mount.stl  Thinner+Cable+Tray.3mf  Top Hub.3mf  bus_box.3mf  nuc_mount.3mf  rear_right_hub.3mf  rear_right_hub.f3d  router_mount.f3d  sbc_cage.3mf  sensor_enclosure_left.3mf  sensor_enclosure_left_super_pretty.3mf  sensor_enclosure_right.3mf  side_panel.3mf  sonar_mounts.3mf  wheel_6.3mf  wheel_hubs.3mf  wifi_pine_top.3mf
3d_models/robot_description/launch/: controller.launch  controller.yaml
3d_models/robot_description/meshes/: wheel_front_left_1.stl  wheel_front_right_1.stl  wheel_rear_left_1.stl  wheel_rear_right_1.stl
3d_models/robot_description/urdf/: robot.gazebo  robot.trans  robot.xacro
data_collectors/: collision_avoidance_dc.py
devices/: camera_ptz.py  compass.py  drive.py  gps.py  imu.py  laser.py  lidar.py  nav_cam.py  pwm_controller.py  servo.py
dietpi_first_boot_configs/: node1.txt  node2.txt  node3.txt
docker/: cv_bridge.dockerfile  depth_scan_to_lidar_scan.dockerfile  diff_drive_controller.dockerfile  esp32_bridge.dockerfile  foxglove.dockerfile  gps.dockerfile  imu.dockerfile  imu_filter.dockerfile  joint_state_publisher.dockerfile  joystick_publisher.dockerfile  lidar.dockerfile  localization.dockerfile  lwf.dockerfile  lwf_arm_base.dockerfile  lwf_robot_state_publisher.dockerfile  lwf_usb_cam.dockerfile  ntp_updater.dockerfile  realsense.dockerfile  realsense2.dockerfile  rgbd.dockerfile  robo_base.dockerfile  robo_cam_base.dockerfile  robo_nav2_base.dockerfile  robot_state_publisher.dockerfile  rplidar.dockerfile  rtab_map.dockerfile  slam.dockerfile  slam_viz.dockerfile  tf_transform_publisher.dockerfile
docker-compose/: apt_depss.txt
esp32_micropython/: install.sh  main.py
esp32_micropython/lwf_libs/pca9685/: pca9685.py
image_handlers/: rpi_image_capture.py  targeting_cam_stream.py  training_data_capture.py  video_viewer.html  webrtc_server.py
install/hwt905_ros_driver/share/hwt905_ros_driver/: local_setup.sh  package.dsv  package.sh
install/lwf_launch/share/lwf_launch/: package.bash  package.dsv  package.sh  package.xml
install/lwf_robot/share/lwf_robot/: package.bash  package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
models/: targeting_cam.ipynb
playbooks/: ansible.cfg  build.yaml  deploy.yaml  inventory.ini  setup.yaml
playbooks/deployment/: deployment_v2.yml  lidar.yaml  update_ros_libs.yaml
playbooks/provision/: apt_repo_setup.yaml  env_init.yaml  mount_node_nfs.yaml  node_package_install.yaml  ros_common_package_install.yaml  ros_env_config.yaml  vm_package_install.yaml
playbooks/provision/templates/: netplan_dns.j2
playbooks/service_deployment/: lidar.yaml  sync_project.yaml
playbooks/setup_playbooks/: apt_repo_setup.yaml  networking.yaml  node_package_install.yaml  ros_common_package_install.yaml  ros_env_config.yaml  ros_vars.yaml  vault.yaml  vm_package_install.yaml
py_nema_driver/: CMakeLists.txt
py_nema_driver/launch/: nmea_serial_driver.launch
py_nema_driver/py_nema_driver/: __init__.py  driver.py
py_nema_driver/py_nema_driver/nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
py_nema_driver/scripts/: nmea_serial_driver
remote_services/: gps.py  laser.py
ros2_jazzy/log/: latest_build
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
ros2_ws/launch/: lwf_rplidar_launch.py
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/lwf_device_drivers/: package.xml  setup.cfg  setup.py
ros2_ws/src/lwf_device_drivers/lwf_device_drivers/: client_member_function.py  service_member_function.py
ros2_ws/src/lwf_device_drivers/srv/: I2CService.srv
ros2_ws/src/lwf_esp32_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/lwf_esp32_interface/lwf_esp32_interface/: motor_controler.py  motor_controller.py
ros2_ws/src/lwf_imu/: package.xml  setup.cfg  setup.py
ros2_ws/src/lwf_imu/lwf_imu/: imu_publisher.py
ros2_ws/src/lwf_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/lwf_launch/config/: ekf_config.yaml  front_camera_info.yaml  imu_config.yaml  joy_teleop.yaml  laser_filter_config.yaml  madgwick_filter_config.yaml  mqtt.yaml  nav2_params.yaml  nmea_serial_driver.yaml
ros2_ws/src/lwf_launch/launch/: dcam.launch.py  joy.launch.py  lidar.launch.py  localization.launch.py  lwf_slam.launch.py  madgwick_filter.launch.py  realsense.launch.py  rtabmap_launch.sh  rtabmap_vio.launch.py  slam.launch.py  slam_viz.launch.py  (+2 more)
ros2_ws/src/lwf_meta/: CMakeLists.txt  package.xml
ros2_ws/src/lwf_motor_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/lwf_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/pwm_driver_interface/: CMakeLists.txt  package.xml
ros2_ws/src/rplidar_ros/: CMakeLists.txt  package.xml
ros2_ws/src/rplidar_ros/launch/: rplidar_c1_launch.py
ros2_ws/src/shit_imu/: package.xml  setup.cfg  setup.py
ros2_ws/startup_scripts/: lidar.sh
service/: autopilot.service  compass.service  drive.service  gps.service  imu.service  lidar.service  lwf_sys_ctl.service  pwm.service  touch_ui_app.service
servicess/: auto_pilot.py  camera_service.py  collision_avoidance_service.py  collision_avoidenc_service.py  course_correction_service.py  navigation_service.py  notification_service.py  real_env.py  system_service.py  targeting_service.py  wet_work_service.py
simulation/: convert_to_tflite.ipynb  env.py  evaluate.py  maze.urdf  robot.urdf  train.py
tools/: image_slicer.py
user_interface/: app.py
(+1957 files in other folders)
