[tool.poetry]
name = "weed-fucker-5000"
version = "0.1.0"
description = ""
authors = ["Dustin Maselbas <dmaselbas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
docopt = "^0.6.2"
opencv-python-headless = "^4.10.0.82"
mypy = "^1.10.0"
pigpio = "^1.78"
rplidar = "^0.9.2"
paho-mqtt = "^2.1.0"
aiortc2 = "^1.8.0.post0"
aiohttp = "^3.9.5"
opencv-python = "^4.10.0.84"
pyserial = "^3.5"
pynmea2 = "^1.19.0"
plotly = "^5.22.0"
python-daemon = "^3.0.1"
smbus3 = "^0.5.5"
pybullet = "^3.2.6"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
gymnasium = "^0.29.1"
tensorflow-metal = "^1.1.0"
numpy = "1.26.4"
torch = "^2.4.0"
onnx = "^1.16.2"
onnx-tf = "^1.10.0"
tensorflow-probability = "^0.24.0"
tensorflow = "2.16.2"
tf-keras = "2.16.0"
onnxruntime = "^1.18.1"
keras = "^3.4.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
