[tool.poetry]
name = "weed-fucker-5000"
version = "0.1.0"
description = ""
authors = ["Dustin Maselbas <dmaselbas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
docopt = "^0.6.2"
opencv-python-headless = "^4.10.0.82"
mypy = "^1.10.0"
pigpio = "^1.78"
rplidar = "^0.9.2"
paho-mqtt = "^2.1.0"
aiortc2 = "^1.8.0.post0"
aiohttp = "^3.9.5"
opencv-python = "^4.10.0.84"
pyserial = "^3.5"
python-daemon = "^3.0.1"
smbus3 = "^0.5.5"
#stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
#gymnasium = "^0.29.1"
#tensorflow-metal = "^1.1.0"
numpy = "1.26.4"
imageio = {extras = ["ffmpeg"], version = "^2.35.0"}
filters = "^1.3.2"
ansible = "^10.3.0"
ansible-vault = "^2.1.0"
colcon-common-extensions = "^0.3.0"
jc = "^1.25.3"
rclpy-intellisense = "^1.0.0"
mpremote = "^1.23.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
