<?xml version="1.0"?>
<package>
    <name>rplidar_ros</name>
    <version>2.1.5</version>
    <description>The rplidar ros package, support rplidar A1/A2/A3/S1/S2/S3/T1/C1</description>

    <maintainer email="ros@slamtec.com">Slamtec ROS Maintainer</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
