<?xml version="1.0"?>
<package format="3">
    <name>rplidar_ros</name>
    <version>1.0.0</version>
    <description>The rplidar_ros package</description>

    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
